[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.333333, 0.333333, 0.333333, 1 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0

[node name="VBoxProgress" type="VBoxContainer" parent="MarginContainer"]
margin_right = 500.0
margin_bottom = 700.0

[node name="Label" type="Label" parent="MarginContainer/VBoxProgress"]
margin_right = 500.0
margin_bottom = 14.0
text = "Level 1"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxProgress"]
margin_top = 18.0
margin_right = 500.0
margin_bottom = 43.0
rect_min_size = Vector2( 0, 25 )
max_value = 10.0
rounded = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 97.0
margin_right = 500.0
margin_bottom = 700.0
rect_min_size = Vector2( 0, 600 )
size_flags_vertical = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 550.0
rect_min_size = Vector2( 0, 550 )
custom_styles/bg = SubResource( 1 )

[node name="ItemList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]

[node name="TextInput" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_left = 100.0
margin_top = 554.0
margin_right = 400.0
margin_bottom = 579.0
rect_min_size = Vector2( 300, 25 )
size_flags_horizontal = 4
size_flags_vertical = 2
caret_blink = true

[node name="AddButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 231.0
margin_top = 583.0
margin_right = 268.0
margin_bottom = 603.0
size_flags_horizontal = 4
text = "Add"

[connection signal="text_entered" from="MarginContainer/VBoxContainer/TextInput" to="." method="_on_TextInput_text_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
